--- a/integrador-4/msvc-tarifa/src/main/resources/application.properties
+++ b/integrador-4/msvc-tarifa/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=msvc-tarifa
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/tarifa?createDatabaseIfNotExist=true
+
+spring.jpa.show-sql=true
+spring.jpa.database=mysql
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
+
+server.port=8003
