incluye roles y seguridad en el gateway

--- a/integrador-4/gateway/src/main/resources/application.yml
+++ b/integrador-4/gateway/src/main/resources/application.yml
@@ -2,6 +2,19 @@ server:
   port: 8090
 
 spring:
+  application:
+    name: gateway
+#  config:
+#    import: optional:configserver:http://localhost:8081
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/auth?createDatabaseIfNotExist=true
+    username: root
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database: mysql
   cloud:
     gateway:
       server:
@@ -17,7 +30,7 @@ spring:
             - id: msvc-factura
               uri: http://localhost:8002
               predicates:
-                - Path=/factura/**
+                - Path=api/factura/**
 
 
             # Monopatin SERVICE
