--- a/integrador-4/msvc-factura/pom.xml
+++ b/integrador-4/msvc-factura/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.14.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
