--- a/integrador-4/msvc-viaje/pom.xml
+++ b/integrador-4/msvc-viaje/pom.xml
@@ -70,6 +70,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.14.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
