--- a/integrador-4/msvc-factura/src/main/resources/application.properties
+++ b/integrador-4/msvc-factura/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/factura?createDatabaseIfNotExi
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 server.port=8002
