--- a/integrador-4/msvc-usuario/pom.xml
+++ b/integrador-4/msvc-usuario/pom.xml
@@ -53,6 +53,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.14.1</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
