--- a/integrador-4/msvc-usuario/pom.xml
+++ b/integrador-4/msvc-usuario/pom.xml
@@ -59,6 +59,12 @@
             <version>1.14.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-openfeign-core</artifactId>
+            <version>4.3.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
