--- a/integrador-4/msvc-parada/pom.xml
+++ b/integrador-4/msvc-parada/pom.xml
@@ -60,6 +60,12 @@
             <version>1.14.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>msvc-tarifa</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
