genera usuarios predeterminados, agrega readme

--- a/integrador-4/gateway/src/main/resources/application.yml
+++ b/integrador-4/gateway/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     username: root
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     database: mysql
   cloud:
