--- a/integrador-4/msvc-usuario/src/main/resources/application.properties
+++ b/integrador-4/msvc-usuario/src/main/resources/application.properties
@@ -1,13 +1,5 @@
 spring.application.name=msvc-usuario
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.url=jdbc:mysql://localhost:3306/usuario?createDatabaseIfNotExist=true
-
-spring.jpa.show-sql=true
-spring.jpa.database=mysql
-spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.data.mongodb.uri=mongodb://root:password@localhost:27017/db_mscv_usuario?authSource=admin
 
 server.port=8003
