Implemente mock pago, cargar saldo y abonar viaje

--- a/integrador-4/msvc-pagomock/pom.xml
+++ b/integrador-4/msvc-pagomock/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>org.grupo14</groupId>
-    <artifactId>msvc-usuario</artifactId>
+    <artifactId>msvc-pagomock</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>msvc-usuario</name>
-    <description>msvc-usuario</description>
+    <name>msvc-pagomock</name>
+    <description>msvc-pagomock</description>
     <url/>
     <licenses>
         <license/>
@@ -47,10 +47,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
-        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -60,25 +57,13 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
             <version>1.14.1</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.session</groupId>
-            <artifactId>spring-session-data-mongodb</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.grupo14</groupId>
-            <artifactId>msvc-pagomock</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
