--- a/integrador-4/msvc-viaje/src/main/resources/application.properties
+++ b/integrador-4/msvc-viaje/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=mcsv-viaje
+spring.application.name=msvc-viaje
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
