--- a/integrador-4/msvc-ia/src/main/resources/application.yml
+++ b/integrador-4/msvc-ia/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
 groq:
   api-key: ${GROQ_API_KEY}
   base-url: https://api.groq.com/openai
-  model: llama-3.1-8b-instant   # o llama3-70b-8192 si querés más calidad
+  model: llama-3.1-8b-instant
   temperature: 0.3
 
 
